# ocr-tesseract-docker

./: Dockerfile  app.py  pyproject.toml  requirements.txt
